--- a/src/components/atoms/icon/index.scss
+++ b/src/components/atoms/icon/index.scss
@@ -1,10 +1,24 @@
-$Icon-size: 24px !default;
-$Icon-fill: #31417d !default;
+@import '~@schibstedspain/sui-theme/lib/index';
 
+$Icon-fill: #31417d !default;
+$Icon-sizes: (
+  'sm': $sz-icon-s,
+  'md': $sz-icon-m,
+  'lg': $sz-icon-l,
+  'xl': $sz-icon-xl
+) !default;
+
+// Output CSS
 .Icon {
-  width: $Icon-size;
-  height: $Icon-size;
   display: inline-flex;
   align-self: center;
   fill: $Icon-fill;
+
+  // Sizes
+  @each $size, $value in $Icon-sizes {
+    &--#{$size} {
+      height: $value;
+      width: $value;
+    }
+  }
 }
