--- a/src/components/atoms/heading/index.scss
+++ b/src/components/atoms/heading/index.scss
@@ -1,16 +1,24 @@
+@import '~@schibstedspain/sui-theme/lib/settings-compat-v7/index';
+@import '~@schibstedspain/sui-theme/lib/index';
+
+$Heading-sizes: (
+  'sm': 'h3',
+  'md': 'h2',
+  'lg': 'h1'
+);
+
 .Heading {
-  font-size: 20px;
-  line-height: 30px;
-  font-weight: 600;
-  margin: 0 0 20px;
-
-  &--small {
-    font-size: 18px;
-    line-height: 20px;
-  }
-
-  &--huge {
-    font-size: 40px;
-    line-height: 50px;
+  @each $size, $value in $Heading-sizes {
+    &--#{$size} {
+      @if $value == 'h3' {
+        @include h3;
+      } @else if $value == 'h2' {
+        @include h2;
+      } @else if $value == 'h1' {
+        @include h1;
+      } @else {
+        @error 'Unknown size #{size}.';
+      }
+    }
   }
 }
