--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,2 @@
-@import 'foundations';
+@import 'lib';
 @import 'generic';
-
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
-
-body {
-  font-family: 'Open Sans', sans-serif;
-}
