--- a/src/styles/lib/themes/adevinta/_components.scss
+++ b/src/styles/lib/themes/adevinta/_components.scss
@@ -1,6 +1,17 @@
-// Components: Atoms
+/**
+ *  Overwrites styles specifically at the component level.
+ *
+ * The file is a template with all the variables you can configure
+ * of the components, uncomment the lines and add your value!
+ *
+ */
+
+// Components
+
+//== Atoms
 
 //## Button
+//$Button-fontSize: $fz-l;
 //$Button-color: $c-white;
 //$Button-backgroundColor: $c-primary;
 //$Button-backgroundColor--hover: darken($Button-backgroundColor, 10%);
@@ -16,9 +27,36 @@
 //$Icon-fill: $c-primary;
 
 //## Input
+//$Input-border: true; // Define if use borders <boolean>
+//$Input-color: $c-black;
 //$Input-background: $c-white;
-//$Input-border: 1px solid $c-gray;
-//$Input-fontSize: $fz-base;
+//$Input-borderColor: $c-gray-light-2;
+//$Input-fontSize: 'l';
+//$Input-paddingY: $p-m;
 //$Input-paddingX: $p-h;
 //$Input-borderRadius: $bdrs-none;
-//$Input-height: 40px;
+//$Input-placeholder-color: $c-gray-light-1;
+//$Input-onHover-borderColor: $c-black;
+//$Input-onFocus-borderColor: $c-black;
+//$Input--disabled-color: $c-gray;
+//$Input--disabled-backgroundColor: $c-gray-light-3;
+
+//## Label
+//$Label-fontSize: $fz-m;
+//$Label-fontWeight: $fw-semi-bold;
+//$Label-color: $c-black;
+
+//== Molecules
+
+//## Calendar
+//$Calendar-week-fontSize: 's';
+//$Calendar-day-fontSize: 'm';
+//$Calendar-day-fontColor: $c-black;
+//$Calendar-day--prevNext-fontColor: $c-gray;
+//$Calendar-day-onHover-backgroundColor: $c-gray-light-3;
+//$Calendar-day-isSelected-backgroundColor: $c-primary;
+//$Calendar-day-isSelected-color: $c-white;
+//$Calendar-shape: 'circle';
+
+//## FormField
+//$FormField-marginBottom: $m-l;
