--- a/src/styles/lib/themes/adevinta/_variables.scss
+++ b/src/styles/lib/themes/adevinta/_variables.scss
@@ -1,7 +1,15 @@
-// Variables
+/**
+ *  Overwrites global variables of your theme.
+ *
+ * You can see the variables you want to overwrite inside the package:
+ * @schibstedspain/sui-theme/lib/index
+ *
+ */
 
 //## Colors
 $c-primary: #2900d2;
 $c-white: #ffffff;
 $c-black: #30302e;
-$c-gray: #eae5e0;
+
+//## Fonts
+$ff-sans-serif: 'Open Sans', sans-serif;
