--- a/src/components/atoms/button/index.scss
+++ b/src/components/atoms/button/index.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/lib/index';
 
+$Button-fontSize: $fz-l !default;
 $Button-color: $c-white !default;
 $Button-backgroundColor: $c-primary !default;
 $Button-backgroundColor--hover: darken($Button-backgroundColor, 10%) !default;
@@ -14,8 +15,9 @@ $Button-PaddingX: $p-h !default;
   border-radius: $Button-borderRadius;
   cursor: pointer;
   display: flex;
-  font-family: inherit;
+  font-size: $Button-fontSize;
   line-height: $lh-button;
+  font-family: inherit;
   outline: none;
   padding: $Button-PaddingY $Button-PaddingX;
   background-color: $Button-backgroundColor;
@@ -32,5 +34,9 @@ $Button-PaddingX: $p-h !default;
   &:disabled {
     cursor: not-allowed;
     opacity: 0.5;
+
+    &:hover {
+      background-color: $Button-backgroundColor;
+    }
   }
 }
