--- a/src/components/atoms/input/index.scss
+++ b/src/components/atoms/input/index.scss
@@ -1,22 +1,70 @@
 @import '../../../styles/index';
 
+$Input-border: true !default;
+
+$Input-color: $c-black !default;
 $Input-background: $c-white !default;
-$Input-border: 1px solid $c-gray !default;
-$Input-fontSize: $fz-base !default;
+$Input-borderColor: $c-gray-light-2 !default;
+$Input-fontSize: 'l' !default;
+$Input-paddingY: $p-m !default;
 $Input-paddingX: $p-h !default;
 $Input-borderRadius: $bdrs-none !default;
-$Input-height: 40px !default;
+$Input-placeholder-color: $c-gray-light-1 !default;
+
+$Input-onHover-borderColor: $c-black !default;
+$Input-onFocus-borderColor: $c-black !default;
+
+$Input--disabled-color: $c-gray !default;
+$Input--disabled-backgroundColor: $c-gray-light-3 !default;
+
+$Input-fontSizes: (
+  's': $fz-s,
+  'm': $fz-m,
+  'l': $fz-l
+);
 
 .Input {
   display: block;
-  outline: none;
   width: 100%;
   background: $Input-background;
-  border: $Input-border;
+  border: 0;
   font-family: inherit;
-  font-size: $Input-fontSize;
-  padding: 0 $Input-paddingX;
-  appearance: none;
+  padding: $Input-paddingY $Input-paddingX;
   border-radius: $Input-borderRadius;
-  height: $Input-height;
+  color: $Input-color;
+  line-height: 1;
+  transition: border-color 0.2s, color 0.2s;
+  @include fontSizeVariation($Input-fontSizes, $Input-fontSize);
+
+  @if $Input-border == true {
+    @include InputBorder(
+      $Input-borderColor,
+      $Input-onHover-borderColor,
+      $Input-onFocus-borderColor
+    );
+  } @else {
+    border: 0;
+  }
+
+  &,
+  &:hover,
+  &:focus,
+  &:active {
+    appearance: none;
+    box-shadow: none;
+    outline: none;
+  }
+
+  &::placeholder {
+    color: $Input-placeholder-color;
+    opacity: 1;
+    transition: color 0.3s;
+  }
+
+  &:disabled {
+    background-color: $Input--disabled-backgroundColor;
+    color: $Input--disabled-color;
+    cursor: not-allowed;
+    opacity: 1;
+  }
 }
