--- a/src/components/molecules/calendar/index.scss
+++ b/src/components/molecules/calendar/index.scss
@@ -1,56 +1,61 @@
-@import '~@schibstedspain/sui-theme/lib/index';
+@import '../../../styles/lib/index';
 
-$Calendar-day-width: 44px !default;
-$Calendar-day-onHover-backgroundColor: #dedede !default;
-$Calendar-day-isSelected-backgroundColor: #31417d !default;
-$Calendar-day-isSelected-color: #ffffff !default;
+$Calendar-week-fontSize: 's' !default;
+$Calendar-day-fontSize: 'm' !default;
+$Calendar-day-fontColor: $c-black !default;
+$Calendar-day--prevNext-fontColor: $c-gray !default;
+$Calendar-day-onHover-backgroundColor: $c-gray-light-3 !default;
+$Calendar-day-isSelected-backgroundColor: $c-primary !default;
+$Calendar-day-isSelected-color: $c-white !default;
+$Calendar-shape: 'circle' !default;
 
-$Calendar-width: $Calendar-day-width * 7 !default;
+$Calendar-day-width: 44px;
+$Calendar-width: $Calendar-day-width * 7;
+$Calendar-shapes: (
+  'circle': $bdrs-rounded,
+  'square': $bdrs-none
+);
+$Calendar-fontSizes: (
+  's': $fz-s,
+  'm': $fz-m,
+  'l': $fz-l
+);
 
 .Calendar {
-  background: #fff;
   max-width: $Calendar-width;
   margin: 0 auto;
 }
 
-.Calendar-topBar {
-  display: flex;
+.Calendar-header {
   width: 100%;
-  padding-bottom: 12px;
+  display: flex;
+  padding-bottom: $p-m;
 }
 
 .Calendar-month {
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 700;
-  padding: 4px 8px;
   flex: 1 auto;
   text-align: center;
+  padding: $p-s $p-m;
 }
 
 .Calendar-arrow {
-  color: #0000ff;
-  font-weight: 700;
   cursor: pointer;
-  padding: 2px 4px;
+  padding: 2px $p-s;
 }
 
-.Calendar-days {
-  font-size: 14px;
+.Calendar-grid {
   display: grid;
   position: relative;
   grid-template-columns: repeat(7, $Calendar-day-width);
   grid-template-rows: 1fr repeat(6, $Calendar-day-width);
-  border-radius: 50%;
   align-items: center;
   justify-content: center;
 }
 
-.Calendar-dayWeeks {
-  display: block;
-  padding: 8px 0;
-  font-size: 12px;
+.Calendar-week {
+  padding: $p-m 0;
   text-align: center;
+  @include fontSizeVariation($Calendar-fontSizes, $Calendar-week-fontSize);
 
   &--weekend {
     font-weight: 700;
@@ -58,27 +63,27 @@ $Calendar-width: $Calendar-day-width * 7 !default;
 }
 
 .Calendar-day {
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  color: $Calendar-day-fontColor;
+  @include fontSizeVariation($Calendar-fontSizes, $Calendar-day-fontSize);
+  @include borderRadiusVariation($Calendar-shapes, $Calendar-shape);
 
   &--prev,
   &--next {
-    color: #a6a6a6;
+    color: $Calendar-day--prevNext-fontColor;
   }
 
   &:hover {
-    background: $Calendar-day-onHover-backgroundColor;
+    background-color: $Calendar-day-onHover-backgroundColor;
   }
 
   &.is-selected {
     color: $Calendar-day-isSelected-color;
-    background: $Calendar-day-isSelected-backgroundColor;
+    background-color: $Calendar-day-isSelected-backgroundColor;
   }
 }
