--- a/src/styles/lib/themes/adevinta/_components.scss
+++ b/src/styles/lib/themes/adevinta/_components.scss
@@ -32,6 +32,7 @@
 //$Input-background: $c-white;
 //$Input-borderColor: $c-gray-light-2;
 //$Input-fontSize: 'l';
+//$Input-lineHeight: $lh-xl;
 //$Input-paddingY: $p-m;
 //$Input-paddingX: $p-h;
 //$Input-borderRadius: $bdrs-none;
