--- a/src/components/molecules/calendar/index.scss
+++ b/src/components/molecules/calendar/index.scss
@@ -72,6 +72,7 @@ $Calendar-fontSizes: (
   color: $Calendar-day-fontColor;
   @include fontSizeVariation($Calendar-fontSizes, $Calendar-day-fontSize);
   @include borderRadiusVariation($Calendar-shapes, $Calendar-shape);
+  transition: color 0.2s, background-color 0.2s;
 
   &--prev,
   &--next {
